--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,9 @@
 
     <item android:id="@+id/mainFragment"
         android:icon="@drawable/baseline_translate_24"
-        android:title="Main" />
+        android:title="@string/main" />
 
     <item android:id="@+id/favouriteFragment"
         android:icon="@drawable/baseline_favorite_24"
-        android:title="Favourite"/>
+        android:title="@string/favourite"/>
 </menu>
