--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,6 +30,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ti_word" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rw_wordsList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/btn_translate"
+        app:layout_constraintTop_toBottomOf="@+id/tv_result"
+        tools:itemCount="10"
+        tools:listitem="@layout/item_word" />
+
     <Button
         android:id="@+id/btn_translate"
         android:layout_width="match_parent"
