--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -17,4 +17,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/iv_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_favorite_24"
+        app:tint="@color/gray"
+        android:paddingStart="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_word"
+        app:layout_constraintStart_toEndOf="@+id/tv_word"
+        app:layout_constraintTop_toTopOf="@id/tv_word" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
