--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -21,11 +21,22 @@
         android:id="@+id/iv_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_favorite_24"
-        app:tint="@color/gray"
-        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:src="@drawable/baseline_favorite_border_20"
         app:layout_constraintBottom_toBottomOf="@+id/tv_word"
-        app:layout_constraintStart_toEndOf="@+id/tv_word"
-        app:layout_constraintTop_toTopOf="@id/tv_word" />
+        app:layout_constraintEnd_toStartOf="@+id/iv_delete"
+        app:layout_constraintTop_toTopOf="@id/tv_word"
+        app:tint="@color/gray" />
+
+    <ImageView
+        android:id="@+id/iv_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="10dp"
+        android:src="@drawable/baseline_delete_20"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_favorite"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/iv_favorite"
+        app:tint="@color/gray" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
