--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,5 +9,5 @@
 
     <item android:id="@+id/favouriteFragment"
         android:icon="@drawable/baseline_favorite_24"
-        android:title="@string/favourite"/>
+        android:title="Favourite"/>
 </menu>
