--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -33,13 +33,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rw_wordsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/btn_translate"
         app:layout_constraintTop_toBottomOf="@+id/tv_result"
+        app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
+        tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/item_word" />
 
     <Button
@@ -49,8 +51,6 @@
         android:layout_margin="16dp"
         android:background="@color/black"
         android:text="Translate word"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_result"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
