--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,10 +25,23 @@
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ti_word" />
+
+    <TextView
+        android:id="@+id/tv_historyTranslate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="История"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_result" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rw_wordsList"
@@ -36,12 +49,11 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:scrollbars="vertical"
+        android:layout_marginTop="15dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/btn_translate"
-        app:layout_constraintTop_toBottomOf="@+id/tv_result"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/tv_historyTranslate"
         tools:itemCount="10"
-        tools:layout_editor_absoluteX="0dp"
         tools:listitem="@layout/item_word" />
 
     <Button
