--- a/app/src/main/res/layout/item_favouriteword.xml
+++ b/app/src/main/res/layout/item_favouriteword.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:text="Favourite Word"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
